ICALv1.7-Mejora Dte diseño

--- a/src/main/resources/reports/DTEFactura.jrxml
+++ b/src/main/resources/reports/DTEFactura.jrxml
@@ -45,16 +45,26 @@
     <detail>
         <band height="700">
 
+            <!-- Fondo -->
+            <rectangle>
+                <reportElement x="0" y="0" width="555" height="700" backcolor="#F9F5F3" mode="Opaque"/>
+            </rectangle>
+
+            <!-- Header Background -->
+            <rectangle>
+                <reportElement x="0" y="0" width="555" height="60" backcolor="#A5D6A7" mode="Opaque"/>
+            </rectangle>
+
             <!-- Logo -->
-            <image>
-                <reportElement x="0" y="0" width="120" height="40"/>
+            <image scaleImage="RetainShape">
+                <reportElement x="20" y="10" width="100" height="40"/>
                 <imageExpression><![CDATA[$P{logoImage}]]></imageExpression>
             </image>
 
             <!-- Título -->
             <textField>
-                <reportElement x="130" y="0" width="425" height="40" forecolor="#A67B5B"/>
-                <textElement textAlignment="Right">
+                <reportElement x="130" y="10" width="405" height="40" forecolor="#6D4C41" mode="Transparent"/>
+                <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="16" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA["FACTURA ELECTRÓNICA - DTE"]]></textFieldExpression>
@@ -62,20 +72,20 @@
 
             <!-- Línea divisoria -->
             <line>
-                <reportElement x="0" y="45" width="555" height="1" forecolor="#4CAF50"/>
+                <reportElement x="20" y="65" width="515" height="1" forecolor="#A5D6A7"/>
             </line>
 
-            <!-- Emisor Datos -->
+            <!-- Emisor -->
             <textField>
-                <reportElement x="0" y="50" width="555" height="15" forecolor="#A67B5B"/>
+                <reportElement x="20" y="70" width="515" height="15" forecolor="#6D4C41"/>
                 <textElement>
-                    <font size="10" isBold="true"/>
+                    <font size="11" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$P{emisorNombre}]]></textFieldExpression>
             </textField>
 
             <textField>
-                <reportElement x="0" y="65" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="87" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -83,7 +93,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="77" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="99" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -91,7 +101,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="89" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="111" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -99,20 +109,20 @@
             </textField>
 
             <line>
-                <reportElement x="0" y="105" width="555" height="1" forecolor="#4CAF50"/>
+                <reportElement x="20" y="128" width="515" height="1" forecolor="#A5D6A7"/>
             </line>
 
-            <!-- Cliente Datos -->
+            <!-- Cliente -->
             <textField>
-                <reportElement x="0" y="110" width="555" height="12" forecolor="#A67B5B"/>
+                <reportElement x="20" y="135" width="515" height="12" forecolor="#6D4C41"/>
                 <textElement>
-                    <font size="9" isBold="true"/>
+                    <font size="10" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA["CLIENTE: " + $P{clienteNombre}]]></textFieldExpression>
             </textField>
 
             <textField>
-                <reportElement x="0" y="122" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="147" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -120,7 +130,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="134" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="159" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -128,7 +138,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="146" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="171" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -136,7 +146,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="158" width="555" height="12" forecolor="#333333"/>
+                <reportElement x="20" y="183" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -144,12 +154,45 @@
             </textField>
 
             <line>
-                <reportElement x="0" y="175" width="555" height="1" forecolor="#4CAF50"/>
+                <reportElement x="20" y="200" width="515" height="1" forecolor="#A5D6A7"/>
             </line>
 
-            <!-- Ítem -->
+            <!-- Cabecera Items -->
             <textField>
-                <reportElement x="0" y="185" width="330" height="15" forecolor="#333333"/>
+                <reportElement x="20" y="210" width="310" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <textElement>
+                    <font size="9" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA["Descripción"]]></textFieldExpression>
+            </textField>
+
+            <textField>
+                <reportElement x="340" y="210" width="50" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <textElement textAlignment="Right">
+                    <font size="9" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA["Cant"]]></textFieldExpression>
+            </textField>
+
+            <textField>
+                <reportElement x="395" y="210" width="65" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <textElement textAlignment="Right">
+                    <font size="9" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA["Precio"]]></textFieldExpression>
+            </textField>
+
+            <textField>
+                <reportElement x="465" y="210" width="70" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <textElement textAlignment="Right">
+                    <font size="9" isBold="true"/>
+                </textElement>
+                <textFieldExpression><![CDATA["Subtotal"]]></textFieldExpression>
+            </textField>
+
+            <!-- Item -->
+            <textField>
+                <reportElement x="20" y="225" width="310" height="15" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -157,7 +200,7 @@
             </textField>
 
             <textField>
-                <reportElement x="340" y="185" width="60" height="15" forecolor="#333333"/>
+                <reportElement x="340" y="225" width="50" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -165,7 +208,7 @@
             </textField>
 
             <textField>
-                <reportElement x="405" y="185" width="70" height="15" forecolor="#333333"/>
+                <reportElement x="395" y="225" width="65" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -173,7 +216,7 @@
             </textField>
 
             <textField>
-                <reportElement x="480" y="185" width="75" height="15" forecolor="#333333"/>
+                <reportElement x="465" y="225" width="70" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -181,12 +224,16 @@
             </textField>
 
             <line>
-                <reportElement x="0" y="205" width="555" height="1" forecolor="#4CAF50"/>
+                <reportElement x="20" y="245" width="515" height="1" forecolor="#A5D6A7"/>
             </line>
 
             <!-- Totales -->
+            <rectangle>
+                <reportElement x="275" y="260" width="260" height="70" backcolor="#A5D6A7" mode="Opaque"/>
+            </rectangle>
+
             <textField>
-                <reportElement x="280" y="215" width="275" height="15" forecolor="#A67B5B"/>
+                <reportElement x="280" y="265" width="250" height="12" forecolor="#6D4C41"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -194,7 +241,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="230" width="275" height="15" forecolor="#A67B5B"/>
+                <reportElement x="280" y="279" width="250" height="12" forecolor="#6D4C41"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -202,7 +249,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="245" width="275" height="15" forecolor="#A67B5B"/>
+                <reportElement x="280" y="293" width="250" height="12" forecolor="#6D4C41"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -210,20 +257,20 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="265" width="275" height="18" forecolor="#4CAF50"/>
-                <textElement textAlignment="Right">
+                <reportElement x="280" y="310" width="250" height="15" forecolor="#FFFFFF" backcolor="#6D4C41" mode="Opaque"/>
+                <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="11" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA["Total a Pagar: $" + $P{totalPagar}]]></textFieldExpression>
             </textField>
 
             <line>
-                <reportElement x="0" y="285" width="555" height="1" forecolor="#4CAF50"/>
+                <reportElement x="20" y="330" width="515" height="1" forecolor="#A5D6A7"/>
             </line>
 
             <!-- Código DTE y Observaciones -->
             <textField>
-                <reportElement x="0" y="295" width="555" height="12" forecolor="#999999"/>
+                <reportElement x="20" y="340" width="515" height="12" forecolor="#999999"/>
                 <textElement>
                     <font size="8" isItalic="true"/>
                 </textElement>
@@ -231,7 +278,7 @@
             </textField>
 
             <textField>
-                <reportElement x="0" y="308" width="555" height="12" forecolor="#999999"/>
+                <reportElement x="20" y="353" width="515" height="12" forecolor="#999999"/>
                 <textElement>
                     <font size="8"/>
                 </textElement>
@@ -240,4 +287,5 @@
 
         </band>
     </detail>
+
 </jasperReport>
