--- a/src/main/resources/reports/DTEFactura.jrxml
+++ b/src/main/resources/reports/DTEFactura.jrxml
@@ -47,12 +47,12 @@
 
             <!-- Fondo -->
             <rectangle>
-                <reportElement x="0" y="0" width="555" height="700" backcolor="#F9F5F3" mode="Opaque"/>
+                <reportElement x="0" y="0" width="555" height="700" backcolor="#FFFFFF" mode="Opaque"/>
             </rectangle>
 
             <!-- Header Background -->
             <rectangle>
-                <reportElement x="0" y="0" width="555" height="60" backcolor="#A5D6A7" mode="Opaque"/>
+                <reportElement x="0" y="0" width="555" height="60" backcolor="#C8E6C9" mode="Opaque"/>
             </rectangle>
 
             <!-- Logo -->
@@ -63,7 +63,7 @@
 
             <!-- Título -->
             <textField>
-                <reportElement x="130" y="10" width="405" height="40" forecolor="#6D4C41" mode="Transparent"/>
+                <reportElement x="130" y="10" width="405" height="40" forecolor="#33691E" mode="Transparent"/>
                 <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="16" isBold="true"/>
                 </textElement>
@@ -72,12 +72,12 @@
 
             <!-- Línea divisoria -->
             <line>
-                <reportElement x="20" y="65" width="515" height="1" forecolor="#A5D6A7"/>
+                <reportElement x="20" y="65" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Emisor -->
             <textField>
-                <reportElement x="20" y="70" width="515" height="15" forecolor="#6D4C41"/>
+                <reportElement x="20" y="70" width="515" height="15" forecolor="#33691E"/>
                 <textElement>
                     <font size="11" isBold="true"/>
                 </textElement>
@@ -109,12 +109,12 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="128" width="515" height="1" forecolor="#A5D6A7"/>
+                <reportElement x="20" y="128" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Cliente -->
             <textField>
-                <reportElement x="20" y="135" width="515" height="12" forecolor="#6D4C41"/>
+                <reportElement x="20" y="135" width="515" height="12" forecolor="#33691E"/>
                 <textElement>
                     <font size="10" isBold="true"/>
                 </textElement>
@@ -154,12 +154,12 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="200" width="515" height="1" forecolor="#A5D6A7"/>
+                <reportElement x="20" y="200" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Cabecera Items -->
             <textField>
-                <reportElement x="20" y="210" width="310" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <reportElement x="20" y="210" width="310" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
                 <textElement>
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -167,7 +167,7 @@
             </textField>
 
             <textField>
-                <reportElement x="340" y="210" width="50" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <reportElement x="340" y="210" width="50" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -175,7 +175,7 @@
             </textField>
 
             <textField>
-                <reportElement x="395" y="210" width="65" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <reportElement x="395" y="210" width="65" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -183,7 +183,7 @@
             </textField>
 
             <textField>
-                <reportElement x="465" y="210" width="70" height="12" backcolor="#A5D6A7" forecolor="#6D4C41" mode="Opaque"/>
+                <reportElement x="465" y="210" width="70" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -224,16 +224,16 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="245" width="515" height="1" forecolor="#A5D6A7"/>
+                <reportElement x="20" y="245" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Totales -->
             <rectangle>
-                <reportElement x="275" y="260" width="260" height="70" backcolor="#A5D6A7" mode="Opaque"/>
+                <reportElement x="275" y="260" width="260" height="70" backcolor="#C8E6C9" mode="Opaque"/>
             </rectangle>
 
             <textField>
-                <reportElement x="280" y="265" width="250" height="12" forecolor="#6D4C41"/>
+                <reportElement x="280" y="265" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -241,7 +241,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="279" width="250" height="12" forecolor="#6D4C41"/>
+                <reportElement x="280" y="279" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -249,7 +249,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="293" width="250" height="12" forecolor="#6D4C41"/>
+                <reportElement x="280" y="293" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -257,7 +257,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="310" width="250" height="15" forecolor="#FFFFFF" backcolor="#6D4C41" mode="Opaque"/>
+                <reportElement x="280" y="307" width="250" height="15" forecolor="#2E7D32"/>
                 <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="11" isBold="true"/>
                 </textElement>
@@ -265,7 +265,7 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="330" width="515" height="1" forecolor="#A5D6A7"/>
+                <reportElement x="20" y="330" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Código DTE y Observaciones -->
