--- a/src/main/resources/reports/DTEFactura.jrxml
+++ b/src/main/resources/reports/DTEFactura.jrxml
@@ -10,8 +10,7 @@
         leftMargin="20"
         rightMargin="20"
         topMargin="20"
-        bottomMargin="20"
-        uuid="3e821c99-4b70-47e7-8f9c-b51f5cf9f0c8">
+        bottomMargin="20">
 
     <!-- Parámetros -->
     <parameter name="logoImage" class="java.lang.String"/>
@@ -21,63 +20,59 @@
     <parameter name="emisorDireccion" class="java.lang.String"/>
     <parameter name="emisorTelefono" class="java.lang.String"/>
     <parameter name="emisorCorreo" class="java.lang.String"/>
-
     <parameter name="clienteNombre" class="java.lang.String"/>
     <parameter name="clienteDocumento" class="java.lang.String"/>
     <parameter name="clienteTelefono" class="java.lang.String"/>
     <parameter name="clienteCorreo" class="java.lang.String"/>
     <parameter name="fechaEmision" class="java.lang.String"/>
     <parameter name="horaEmision" class="java.lang.String"/>
-
     <parameter name="descripcionItem" class="java.lang.String"/>
     <parameter name="cantidadItem" class="java.lang.String"/>
     <parameter name="precioItem" class="java.lang.String"/>
     <parameter name="subtotalItem" class="java.lang.String"/>
-
     <parameter name="totalNeto" class="java.lang.String"/>
     <parameter name="totalIva" class="java.lang.String"/>
     <parameter name="totalTributo" class="java.lang.String"/>
     <parameter name="totalPagar" class="java.lang.String"/>
-
     <parameter name="codigoGeneracion" class="java.lang.String"/>
     <parameter name="observaciones" class="java.lang.String"/>
+    <parameter name="qrImageBase64" class="java.io.InputStream"/>
 
     <detail>
         <band height="700">
 
             <!-- Fondo -->
             <rectangle>
-                <reportElement x="0" y="0" width="555" height="700" backcolor="#FFFFFF" mode="Opaque"/>
+                <reportElement mode="Opaque" x="0" y="0" width="555" height="700" backcolor="#FFFFFF"/>
             </rectangle>
 
             <!-- Header Background -->
             <rectangle>
-                <reportElement x="0" y="0" width="555" height="60" backcolor="#C8E6C9" mode="Opaque"/>
+                <reportElement mode="Opaque" x="0" y="0" width="555" height="60" backcolor="#C8E6C9"/>
             </rectangle>
 
             <!-- Logo -->
             <image scaleImage="RetainShape">
-                <reportElement x="20" y="10" width="100" height="40"/>
+                <reportElement x="20" y="10" width="40" height="40"/>
                 <imageExpression><![CDATA[$P{logoImage}]]></imageExpression>
             </image>
 
             <!-- Título -->
             <textField>
-                <reportElement x="130" y="10" width="405" height="40" forecolor="#33691E" mode="Transparent"/>
+                <reportElement mode="Transparent" x="80" y="10" width="455" height="40" forecolor="#33691E"/>
                 <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="16" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA["FACTURA ELECTRÓNICA - DTE"]]></textFieldExpression>
             </textField>
 
-            <!-- Línea divisoria -->
             <line>
                 <reportElement x="20" y="65" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Emisor -->
             <textField>
-                <reportElement x="20" y="70" width="515" height="15" forecolor="#33691E"/>
+                <reportElement x="20" y="183" width="515" height="15" forecolor="#33691E"/>
                 <textElement>
                     <font size="11" isBold="true"/>
                 </textElement>
@@ -85,7 +80,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="87" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="200" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -93,7 +88,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="99" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="212" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -101,7 +96,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="111" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="224" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -109,12 +104,12 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="128" width="515" height="1" forecolor="#C8E6C9"/>
+                <reportElement x="20" y="241" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Cliente -->
             <textField>
-                <reportElement x="20" y="135" width="515" height="12" forecolor="#33691E"/>
+                <reportElement x="20" y="248" width="515" height="12" forecolor="#33691E"/>
                 <textElement>
                     <font size="10" isBold="true"/>
                 </textElement>
@@ -122,7 +117,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="147" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="260" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -130,7 +125,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="159" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="272" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -138,7 +133,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="171" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="284" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -146,7 +141,7 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="183" width="515" height="12" forecolor="#444444"/>
+                <reportElement x="20" y="296" width="515" height="12" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -154,12 +149,12 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="200" width="515" height="1" forecolor="#C8E6C9"/>
+                <reportElement x="20" y="313" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Cabecera Items -->
             <textField>
-                <reportElement x="20" y="210" width="310" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
+                <reportElement mode="Opaque" x="20" y="323" width="310" height="12" forecolor="#33691E" backcolor="#C8E6C9"/>
                 <textElement>
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -167,7 +162,7 @@
             </textField>
 
             <textField>
-                <reportElement x="340" y="210" width="50" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
+                <reportElement mode="Opaque" x="340" y="323" width="50" height="12" forecolor="#33691E" backcolor="#C8E6C9"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -175,7 +170,7 @@
             </textField>
 
             <textField>
-                <reportElement x="395" y="210" width="65" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
+                <reportElement mode="Opaque" x="395" y="323" width="65" height="12" forecolor="#33691E" backcolor="#C8E6C9"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -183,16 +178,15 @@
             </textField>
 
             <textField>
-                <reportElement x="465" y="210" width="70" height="12" backcolor="#C8E6C9" forecolor="#33691E" mode="Opaque"/>
+                <reportElement mode="Opaque" x="465" y="323" width="70" height="12" forecolor="#33691E" backcolor="#C8E6C9"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
                 <textFieldExpression><![CDATA["Subtotal"]]></textFieldExpression>
             </textField>
 
-            <!-- Item -->
             <textField>
-                <reportElement x="20" y="225" width="310" height="15" forecolor="#444444"/>
+                <reportElement x="20" y="338" width="310" height="15" forecolor="#444444"/>
                 <textElement>
                     <font size="9"/>
                 </textElement>
@@ -200,7 +194,7 @@
             </textField>
 
             <textField>
-                <reportElement x="340" y="225" width="50" height="15" forecolor="#444444"/>
+                <reportElement x="340" y="338" width="50" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -208,7 +202,7 @@
             </textField>
 
             <textField>
-                <reportElement x="395" y="225" width="65" height="15" forecolor="#444444"/>
+                <reportElement x="395" y="338" width="65" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -216,7 +210,7 @@
             </textField>
 
             <textField>
-                <reportElement x="465" y="225" width="70" height="15" forecolor="#444444"/>
+                <reportElement x="465" y="338" width="70" height="15" forecolor="#444444"/>
                 <textElement textAlignment="Right">
                     <font size="9"/>
                 </textElement>
@@ -224,16 +218,16 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="245" width="515" height="1" forecolor="#C8E6C9"/>
+                <reportElement x="20" y="358" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
             <!-- Totales -->
             <rectangle>
-                <reportElement x="275" y="260" width="260" height="70" backcolor="#C8E6C9" mode="Opaque"/>
+                <reportElement mode="Opaque" x="275" y="373" width="260" height="70" backcolor="#F0F7F1"/>
             </rectangle>
 
             <textField>
-                <reportElement x="280" y="265" width="250" height="12" forecolor="#33691E"/>
+                <reportElement x="280" y="378" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -241,7 +235,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="279" width="250" height="12" forecolor="#33691E"/>
+                <reportElement x="280" y="392" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -249,7 +243,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="293" width="250" height="12" forecolor="#33691E"/>
+                <reportElement x="280" y="406" width="250" height="12" forecolor="#33691E"/>
                 <textElement textAlignment="Right">
                     <font size="9" isBold="true"/>
                 </textElement>
@@ -257,7 +251,7 @@
             </textField>
 
             <textField>
-                <reportElement x="280" y="307" width="250" height="15" forecolor="#2E7D32"/>
+                <reportElement x="280" y="420" width="250" height="15" forecolor="#2E7D32"/>
                 <textElement textAlignment="Right" verticalAlignment="Middle">
                     <font size="11" isBold="true"/>
                 </textElement>
@@ -265,12 +259,11 @@
             </textField>
 
             <line>
-                <reportElement x="20" y="330" width="515" height="1" forecolor="#C8E6C9"/>
+                <reportElement x="15" y="460" width="515" height="1" forecolor="#C8E6C9"/>
             </line>
 
-            <!-- Código DTE y Observaciones -->
             <textField>
-                <reportElement x="20" y="340" width="515" height="12" forecolor="#999999"/>
+                <reportElement x="20" y="490" width="515" height="12" forecolor="#999999"/>
                 <textElement>
                     <font size="8" isItalic="true"/>
                 </textElement>
@@ -278,14 +271,18 @@
             </textField>
 
             <textField>
-                <reportElement x="20" y="353" width="515" height="12" forecolor="#999999"/>
+                <reportElement x="20" y="503" width="515" height="12" forecolor="#999999"/>
                 <textElement>
                     <font size="8"/>
                 </textElement>
                 <textFieldExpression><![CDATA[$P{observaciones}]]></textFieldExpression>
             </textField>
 
+            <image scaleImage="RetainShape">
+                <reportElement x="20" y="70" width="100" height="100"/>
+                <imageExpression><![CDATA[$P{qrImageBase64}]]></imageExpression>
+            </image>
+
         </band>
     </detail>
-
 </jasperReport>
